k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeshop-payment
  labels:
    app: kubeshop-payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeshop-payment
  template:
    metadata:
      labels:
        app: kubeshop-payment
    spec:
      containers:
        - name: payment
          image: kubeshop-payment:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kubeshop-payment
  labels:
    app: kubeshop-payment
spec:
  type: ClusterIP
  selector:
    app: kubeshop-payment
  ports:
    - name: http
      port: 3002
      targetPort: 3002
